# repo-context

./: .env.example  .gitignore  .repo-context.toml.example  AGENTS.md  README.md  config.yaml.example  pyproject.toml
docs/: implementation-order.md
specs/001-repo-context-explorer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-context-explorer/contracts/: cli.md  explorer-tools.md  mcp.md
specs/002-deterministic-explorer-harness/: spec.md
specs/003-latency-bounded-explorer-harness/: spec.md
specs/004-fastcontext-parallel-tool-executor/: spec.md
specs/005-exact-path-symbol-fast-path/: spec.md
specs/006-project-root-yaml-dotenv-config/: spec.md
specs/007-raw-location-payload/: spec.md
src/repo_context/: __init__.py  agent.py  cli.py  config.py  llm.py  logging.py  mcp_server.py  types.py
src/repo_context/tools/: __init__.py  glob.py  grep.py  read.py  safety.py
tests/contract/: test_agent.py  test_cli.py  test_mcp.py
tests/e2e/: test_current_repo_exploration.py  test_current_repo_multi_prompt_timing.py
tests/fixtures/sample_repo/src/api/: validation.py
tests/fixtures/sample_repo/tests/: test_validation.py
tests/integration/: test_fixture_exploration.py
tests/unit/: test_citations.py  test_config.py  test_tools.py
